<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.xpdfutils</groupId>
    <artifactId>xpdf-utils</artifactId>
    <version>4.04.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>pdf-text</module>
        <module>pdf-text-c</module>
    </modules>

    <properties>
        <lombok.version>1.18.28</lombok.version>
        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.13.0</version>
            </dependency>
            <dependency>
                <groupId>io.xpdfutils</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.12.0</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <!--todo: intellij understands how to execute maven wrapper with correct java version.
                                but when running wrapper from command line, wrapper thinks java home is 17, and you get a warning.
                                read more here about why that warning matters: https://stackoverflow.com/a/12050087/8784215
                                and then figure out how to properly configure javac bootclasspath via call to maven wrapper or from compilerArgs in pom
                                ....question: if you only have java 8 installed on vm which builds/deploys final artifacts, does this even matter? (just a local issue, right?)
                        -->
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <!--
                todo: figure out how to deploy/install sources
                  just used the following commands to do manually, for time being...
                  mvnw source:jar
                  mvnw install:install-file -Dfile=pdf-text/target/pdf-text-4.04.0-SNAPSHOT.jar -Dsources=pdf-text/target/pdf-text-4.04.0-SNAPSHOT-sources.jar
                  (i think you need the both the maven-source-plugin and maven-install-plugin....)
                  -->
            </plugins>
        </pluginManagement>
    </build>

</project>